# transforge

./: .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py  test_double_unification.py  test_rdf.py
doc/: 01 Types.md  02 Expressions.md  03 Querying.md  README.md  transformation-algebra.md
docs/: 01 Types.md  02 Expressions.md  03 Querying.md  README.md  manual.md  tutorial.md
docs/resource/: NearestObject-tg.dot  NearestObject-wf.ttl  sl.py  stl.py  vocab.dot  vocab.py  vocab.ttl  wf.ttl  wf1.ttl
quangis/: error.py
quangis/transformation/: algebra.py  type.py
rdf/: transformation-algebra.ttl
tests/: test_alg.py  test_algebra.py  test_expr.py  test_graph.py  test_lang.py  test_query.py  test_rdf.py  test_type.py  test_type_application.py  testcase.py
tools/: pypi.sh  viz.sh
transforge/: __init__.py  __main__.py  bag.py  expr.py  graph.py  label.py  lang.py  list.py  namespace.py  query.py  type.py  workflow.py
transforge/util/: cli.py  store.py  utils.py
transformation_algebra/: __init__.py  __main__.py  alg.py  base.py  chain.py  error.py  expr.py  flow.py  graph.py  lang.py  namespace.py  process.py  query.py  rdf.py  tool.py  type.py  util.py  workflow.py
transformation_algebra/util/: __init__.py  cli.py  common.py  store.py  write.py
utils/: contra.py  test.sh  viz.sh
vocab/: transforge.ttl  transformation-algebra.ttl
