[metadata]
name = transformation_algebra
version = 0.1.3
author = nsv
author_email = n.steenbergen@uu.nl
description = Type inference for transformation algebras.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/quangis/transformation-algebra
project_urls =
    Bug Tracker = https://github.com/quangis/transformation-algebra/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Typing :: Typed
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.9
include-package-data = True

[options.package_data]
transformation_algebra = py.typed

[pycodestyle]
ignore = E128, W503, E124, W504
# suppresses whining about visual indentation in our multiline lambdas in
# transformation algebra definitions

[mypy]

[mypy-pyparsing.*]
ignore_missing_imports = True

[mypy-rdflib.*]
ignore_missing_imports = True
