[metadata]
name = transforge
version = 0.2.1
author = nsv
author_email = n.steenbergen@uu.nl
description = Annotate procedures as type transformations. Create and query transformation graphs.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    concept types
    procedural metadata
    type inference
    polymorphism
    transformation graphs
    semantic web
    rdf
    subtyping
url = https://github.com/quangis/transforge
project_urls =
    Bug Tracker = https://github.com/quangis/transforge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Typing :: Typed
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: GIS

[options]
packages = find:
python_requires = >=3.9
include-package-data = True
install_requires =
    rdflib>=6.1.1
    plumbum>=1.7.2

[options.package_data]
transforge = py.typed

[options.entry_points]
console_scripts =
    transforge = transforge.util.cli:main

[pycodestyle]
ignore = E128, W503, E124, W504, E302, E211
# suppresses whining about visual indentation in our multiline lambdas in
# transformation algebra definitions

[mypy]

[mypy-pyparsing.*]
ignore_missing_imports = True

[mypy-rdflib.*]
ignore_missing_imports = True
